@@ -14,6 +14,12 @@ java {
     }
 }
 
+// Case문 프리뷰
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+    options.release = 17
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -26,7 +32,6 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -41,7 +46,10 @@ dependencies {
     implementation 'software.amazon.awssdk:auth'
     implementation 'software.amazon.awssdk:aws-core'
     implementation 'software.amazon.awssdk:regions'
-
+    // Jaro Winkler 유사도 계산 의존성
+    implementation 'org.apache.commons:commons-text:1.11.0'
+    // MongoDB (개발/운영용)
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -51,7 +59,35 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'com.h2database:h2'
+    // 임베디드 MongoDB (테스트용)
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.12.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Querydsl 설정
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+
+    // https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    // Jsoup 라이브러리
+    implementation 'org.jsoup:jsoup:1.16.1'
+
+    // AWS SDK 버전 관리를 위한 BOM (Bill of Materials) - 모든 AWS SDK 모듈의 버전을 통합 관리
+    implementation platform('software.amazon.awssdk:bom:2.21.29')
+
+    // Amazon S3 파일 업로드/다운로드/삭제 기능을 위한 클라이언트 라이브러리
+    implementation 'software.amazon.awssdk:s3:2.31.7'
+    // Amazon RDS 데이터베이스 연결 및 관리를 위한 클라이언트 라이브러리
+    implementation 'software.amazon.awssdk:rds'
+    // AWS 인증 및 권한 처리를 위한 라이브러리 (액세스 키, IAM 역할 등)
+    implementation 'software.amazon.awssdk:auth'
+
+    // AWS SDK 핵심 기능을 제공하는 공통 라이브러리
+    implementation 'software.amazon.awssdk:aws-core'
+    // AWS 리전(지역) 설정 및 관리를 위한 라이브러리
+    implementation 'software.amazon.awssdk:regions'
 }
 
 tasks.named('test') {
@@ -104,6 +140,18 @@ afterEvaluate {
                     minimum = 0.80 // 라인 커버리지 최소 비율을 80%로 설정
                 }
             }
+        }
+    }
+}
+
+// Q객체 생성 위치 경로 지정
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+sourceSets {
+    main {
+        java {
+            srcDir querydslDir
+            srcDir 'build/generated/sources/annotationProcessor/java/main'
         }
     }
 }
